# dl-experiments

./: .gitignore  Classification.ipynb  Prelims.ipynb  README.md  Regression.ipynb  Train_Colab.ipynb  Transformers.ipynb  config.py  main.py  mnist_tutorial.ipynb  model.py  pyproject.toml  tokenizer.json  train.py  train_tokenizer.py  utils.py
notebooks/: Generate.ipynb  RoPE_Verification.ipynb  Transformers.ipynb
