[project]
name = "learning-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "datasets[vision]>=4.8.2",
    "flax>=0.12.5",
    "grain>=0.2.16",
    "huggingface-hub[cli]>=1.7.1",
    "importlib-resources>=6.5.2",
    "ipywidgets>=8.1.8",
    "jax>=0.9.1",
    "optax>=0.2.6",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "tensorflow-datasets>=4.9.9",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.3.0",
]
