[project]
name = "learning-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.2",
    "huggingface-hub[cli]>=1.7.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.3.0",
    "wandb>=0.19.0",
    "safetensors>=0.5.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
